--- a/app.json
+++ b/app.json
@@ -22,8 +22,9 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
+      "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "baseUrl": "/word-game"
     },
     "plugins": [
       "expo-router",
