Rename Fenceposts to Intersections throughout app
Updated all references, types, and labels from 'Fenceposts' to 'Intersections' in code, UI, and documentation to reflect the new puzzle name. This includes type/interface renaming, UI text changes, and comments for consistency.

--- a/app.json
+++ b/app.json
@@ -44,7 +44,7 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true,
-      "baseUrl": "/word-game"
+      "baseUrl": "/intersections"
     }
   }
 }
