--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "predeploy": "npx expo export --platform web",
@@ -20,7 +20,10 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
