Update app name and add env vars for builds
Changed the app display name to 'IntersectionsGame' and set 'CFBundleDisplayName' in app.json. Added environment variables for iOS bundle identifier and Android package in eas.json for preview and production builds.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Intersections",
+    "name": "IntersectionsGame",
     "slug": "intersections",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -12,7 +12,8 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.stonefranklin.intersections",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "CFBundleDisplayName": "Intersections"
       }
     },
     "android": {
