Add daily notification scheduling for puzzle reminders
Integrates expo-notifications to schedule daily reminders at 9 AM for users to play the puzzle, with logic to avoid notifying users who have already completed the day's puzzle. Adds notification configuration to app.json, updates dependencies, and introduces a notificationService utility for managing permissions and scheduling.

--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "CFBundleDisplayName": "Intersections"
+      },
+      "entitlements": {
+        "aps-environment": "development"
       }
     },
     "android": {
@@ -42,6 +45,14 @@
           "dark": {
             "backgroundColor": "#000000"
           }
+        }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/intersections-logo.png",
+          "color": "#0f0f1a",
+          "sounds": []
         }
       ]
     ],
