Replace emoji icons with vector icons and add web template
Replaced emoji icons in the UI with @expo/vector-icons for a more consistent appearance across platforms. Added font loading and splash screen handling in _layout.tsx to support icon fonts on web. Updated app.json to use a custom web template and added web/index.html. Removed emoji from notification titles for a cleaner notification experience.

--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "backgroundColor": "#0f0f1a"
+      "backgroundColor": "#0f0f1a",
+      "template": "./web/index.html"
     },
     "plugins": [
       "expo-router",
