Add Apple Sign In and web asset fix script
Integrates Apple Sign In using expo-apple-authentication, updating the authentication context and UI to support Apple login on iOS. Adds expo-apple-authentication and jsonwebtoken dependencies. Introduces a post-export script to relocate font assets for web builds and update asset references, and updates deploy scripts to use this fix. Minor .gitignore and settings updates included.

--- a/app.json
+++ b/app.json
@@ -36,6 +36,7 @@
     },
     "plugins": [
       "expo-router",
+      "expo-apple-authentication",
       [
         "expo-splash-screen",
         {
