--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "predeploy": "npx expo export --platform web",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npx expo export --platform web && node scripts/fix-web-assets.js",
+    "deploy": "gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.25",
+    "expo-apple-authentication": "~8.0.8",
     "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.8",
@@ -35,6 +36,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "jsonwebtoken": "^9.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
