Add platform setup guides and update build configs
Added KEYSTORE_SETUP.md and TESTFLIGHT_SETUP.md to document Android and iOS release processes. Updated app.json to set iOS build number to 1 and changed aps-environment to production for push notifications. Modified eas.json to specify build types for Android (apk for preview, app-bundle for production) and enable auto-increment for iOS production builds.

--- a/app.json
+++ b/app.json
@@ -11,12 +11,13 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.stonefranklin.intersections",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "CFBundleDisplayName": "Intersections"
       },
       "entitlements": {
-        "aps-environment": "development"
+        "aps-environment": "production"
       }
     },
     "android": {
