--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.stonefranklin.intersections"
+      "package": "com.stonefranklin.intersections",
+      "name": "Intersections"
     },
     "web": {
       "bundler": "metro",
