Update auth redirect, add Vercel config, and minor tweaks
Changed Google auth redirect path to '/auth/callback' and added query parameters for offline access and consent. Removed 'baseUrl' from app.json experiments. Added a 'build' script to package.json. Introduced vercel.json for deployment configuration with rewrites and security headers. Updated local settings to allow 'eas --version' command.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "predeploy": "npx expo export --platform web && node scripts/fix-web-assets.js",
-    "deploy": "gh-pages -d dist --dotfiles"
+    "deploy": "gh-pages -d dist --dotfiles",
+    "build": "npx expo export --platform web && node scripts/fix-web-assets.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
