--- a/app.json
+++ b/app.json
@@ -69,8 +69,7 @@
     ],
     "experiments": {
       "typedRoutes": true,
-      "reactCompiler": true,
-      "baseUrl": "/intersections"
+      "reactCompiler": true
     },
     "extra": {
       "router": {},
