--- a/package.json
+++ b/package.json
@@ -11,7 +11,21 @@
     "lint": "expo lint",
     "predeploy": "npx expo export --platform web && node scripts/fix-web-assets.js",
     "deploy": "gh-pages -d dist --dotfiles",
-    "build": "npx expo export --platform web && node scripts/fix-web-assets.js"
+    "build": "npx expo export --platform web && node scripts/fix-web-assets.js",
+    "build:android": "eas build --platform android",
+    "build:android:preview": "eas build --platform android --profile preview",
+    "build:android:production": "eas build --platform android --profile production",
+    "build:ios": "eas build --platform ios",
+    "build:ios:preview": "eas build --platform ios --profile preview",
+    "build:ios:production": "eas build --platform ios --profile production",
+    "build:all": "eas build --platform all",
+    "build:all:production": "eas build --platform all --profile production",
+    "submit:android": "eas submit --platform android",
+    "submit:ios": "eas submit --platform ios",
+    "submit:all": "eas submit --platform all",
+    "build-and-submit:android": "eas build --platform android --profile production --auto-submit",
+    "build-and-submit:ios": "eas build --platform ios --profile production --auto-submit",
+    "build-and-submit:all": "eas build --platform all --profile production --auto-submit"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
