Add production AdMob config and update theme color
Added app.config.js for Expo project configuration, including AdMob plugin setup. Updated eas.json to include AdMob app and rewarded ad unit IDs in environment variables for both development and production. Modified use-rewarded-ad hook to use production ad unit IDs from environment variables, falling back to test IDs if not set. Updated brandPrimary color in theme constants.

--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,9 @@
       },
       "env": {
         "EXPO_IOS_BUNDLE_IDENTIFIER": "com.stonefranklin.intersections",
-        "EXPO_ANDROID_PACKAGE": "com.stonefranklin.intersections"
+        "EXPO_ANDROID_PACKAGE": "com.stonefranklin.intersections",
+        "ADMOB_ANDROID_APP_ID": "ca-app-pub-6475460515852013~5639575492",
+        "ADMOB_IOS_APP_ID": "ca-app-pub-6475460515852013~1564599114"
       }
     },
     "production": {
@@ -28,7 +30,12 @@
       },
       "env": {
         "EXPO_IOS_BUNDLE_IDENTIFIER": "com.stonefranklin.intersections",
-        "EXPO_ANDROID_PACKAGE": "com.stonefranklin.intersections"
+        "EXPO_ANDROID_PACKAGE": "com.stonefranklin.intersections",
+        "ADMOB_ANDROID_APP_ID": "ca-app-pub-6475460515852013~5639575492",
+        "ADMOB_IOS_APP_ID": "ca-app-pub-6475460515852013~1564599114",
+        "EXPO_PUBLIC_ADMOB_ANDROID_REWARDED_AD_UNIT": "ca-app-pub-6475460515852013/8785431829",
+        "EXPO_PUBLIC_ADMOB_IOS_REWARDED_AD_UNIT": "ca-app-pub-6475460515852013/9211332458",
+        "USE_PRODUCTION_ADS": "true"
       }
     }
   },
