--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "build": "npx expo export --platform web && node scripts/fix-web-assets.js",
     "build:android": "eas build --platform android",
     "build:android:preview": "eas build --platform android --profile preview",
+    "build:android:internal-testing": "eas build --platform android --profile internal-testing",
     "build:android:production": "eas build --platform android --profile production",
     "build:ios": "eas build --platform ios",
     "build:ios:preview": "eas build --platform ios --profile preview",
+    "build:ios:internal-testing": "eas build --platform ios --profile internal-testing",
     "build:ios:production": "eas build --platform ios --profile production",
     "build:all": "eas build --platform all",
+    "build:all:internal-testing": "eas build --platform all --profile internal-testing",
     "build:all:production": "eas build --platform all --profile production",
     "submit:android": "eas submit --platform android",
     "submit:ios": "eas submit --platform ios",
