--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "gh-pages": "^6.3.0",
+    "supabase": "^2.70.5",
     "typescript": "~5.9.2"
   },
   "private": true
